--- a/gir2pascal.lpi
+++ b/gir2pascal.lpi
@@ -1,38 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="9"/>
+    <Version Value="12"/>
     <General>
       <Flags>
         <MainUnitHasCreateFormStatements Value="False"/>
+        <CompatibilityMode Value="True"/>
       </Flags>
       <SessionStorage Value="InProjectDir"/>
-      <MainUnit Value="0"/>
       <ResourceType Value="res"/>
-      <UseXPManifest Value="True"/>
       <Icon Value="0"/>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
     </i18n>
-    <VersionInfo>
-      <StringTable ProductVersion=""/>
-    </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
       <DestinationDirectory Value="/tmp/publishedproject/"/>
-      <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
-      <ExcludeFileFilter Value="*.(bak|ppu|o|so);*~;backup"/>
     </PublishOptions>
     <RunParams>
       <local>
-        <FormatVersion Value="1"/>
-        <CommandLineParams Value="-wni /home/andrew/programming/lazarus-ccr.old/applications/gobject-introspection/girfiles-from-felix/Gtk-3.0.gir -o /tmp/gir-out"/>
-        <LaunchingApplication Use="True" PathPlusParams="/usr/bin/gnome-terminal -t 'Lazarus Run Output' -e '$(LazarusDir)/tools/runwait.sh $(TargetCmdLine)'"/>
+        <CommandLineParams Value="-wnt -i &quot;d:/msys64/mingw64/share/gir-1.0/GExiv2-0.10.gir&quot; --output-directory ../pascal-gir-bindings --paths d:/msys64/mingw64/share/gir-1.0/ >gexiv2.log"/>
+        <LaunchingApplication PathPlusParams="/usr/bin/gnome-terminal -t &apos;Lazarus Run Output&apos; -e &apos;$(LazarusDir)/tools/runwait.sh $(TargetCmdLine)&apos;"/>
+        <WorkingDirectory Value="E:/lazdev2/extras/gimp/pascal-gir-bindings"/>
       </local>
+      <FormatVersion Value="2"/>
+      <Modes Count="1">
+        <Mode0 Name="default">
+          <local>
+            <CommandLineParams Value="-wnt -i &quot;d:/msys64/mingw64/share/gir-1.0/GExiv2-0.10.gir&quot; --output-directory ../pascal-gir-bindings --paths d:/msys64/mingw64/share/gir-1.0/ >gexiv2.log"/>
+            <LaunchingApplication PathPlusParams="/usr/bin/gnome-terminal -t &apos;Lazarus Run Output&apos; -e &apos;$(LazarusDir)/tools/runwait.sh $(TargetCmdLine)&apos;"/>
+            <WorkingDirectory Value="E:/lazdev2/extras/gimp/pascal-gir-bindings"/>
+          </local>
+        </Mode0>
+      </Modes>
     </RunParams>
     <Units Count="11">
       <Unit0>
@@ -92,7 +96,7 @@
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="gir2pascal"/>
+      <Filename Value="bin/gir2pascal"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
@@ -100,19 +104,26 @@
     </SearchPaths>
   </CompilerOptions>
   <Debugging>
-    <Exceptions Count="4">
+    <Exceptions Count="5">
       <Item1>
         <Name Value="EAbort"/>
+        <Enabled Value="False"/>
       </Item1>
       <Item2>
         <Name Value="ECodetoolError"/>
       </Item2>
       <Item3>
         <Name Value="EFOpenError"/>
+        <Enabled Value="False"/>
       </Item3>
       <Item4>
         <Name Value="EStringListError"/>
+        <Enabled Value="False"/>
       </Item4>
+      <Item5>
+        <Name Value="Exception"/>
+        <Enabled Value="False"/>
+      </Item5>
     </Exceptions>
   </Debugging>
 </CONFIG>
